# attention-attention

./: .editorconfig  .gitignore  Dockerfile  MANIFEST.in  Pipfile  README.md  attention_attention.py  flake.nix  pyproject.toml  setup.py  tox.ini
.github/workflows/: docker.yml
attention-attention/: __init__.py  __main__.py
attention_attention/: __init__.py  __main__.py
